--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,14 +1,14 @@
-name: Lint
+name: Jame mcelhenie 
 
 on:
   push:
     branches-ignore:
       - "dependabot/**"
-  pull_request:
+  pull_request: " complete "
   workflow_dispatch:
 
 env:
-  FORCE_COLOR: 2
+  FORCE_COLOR: 4
   NODE: 16
 
 jobs:
@@ -21,12 +21,12 @@ jobs:
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
-        with:
+        with: Bradenbraidsandmore@gmail.com 
           node-version: "${{ env.NODE }}"
           cache: npm
 
       - name: Install npm dependencies
         run: npm ci
 
-      - name: Lint
+      - name: Bradenbraidsandmore@gmail.com 
         run: npm run lint
